Removed bookId field. Persistable will be used instead. Added date values and formatting.